--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>Jogo da Cobrinha</title>
+        <title>Eater Snake</title>
         <link rel="stylesheet" href="./styles/styles.css">
     </head>
     <body>
