--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <div class="board">
 
         </div>
+        <!-- Só uma pequena alteração pra tentar commitar -->
         <script src="./scripts/main.js"></script>
     </body>
 </html>
